--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,24 +5,34 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.0.6 <4.0.0'
+  flutter: ">=3.10.6"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_picker: ^2.1.0
-  provider: ^6.0.5
+  provider: ^6.1.2
   rxdart: ^0.27.7
   flutter_bloc: ^8.1.3
-  meta: ^1.7.0
+  meta: ^1.12.0
+  get_it: ^7.7.0
+  injectable: ^2.4.2
+  bloc_presentation: ^1.0.0
+  bloc_concurrency: ^0.2.5
+  freezed: ^2.5.2
+  realm: ^3.0.0
+  freezed_annotation: ^2.4.1
+  injectable_generator: ^2.6.1
+  logger: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: 2.0.0
-  build_runner: ^2.4.6
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.9
 
 flutter_icons:
   ios: true
